# agent-tech-letter

./: .gitattributes  .gitignore  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: draft.yml  send.yml
config/: channels.yaml  sources.yaml
drafts/: issue-2026-05-29.json  issue-2026-05-29.md  issue-2026-05-31.json  issue-2026-05-31.md  issue-2026-06-07.json  issue-2026-06-07.md  issue-2026-06-14.json  issue-2026-06-14.md  issue-2026-06-21.json  issue-2026-06-21.md  issue-2026-06-28.json  issue-2026-06-28.md
issues/: 2026-05-21-9b8087875c1a37f8.html  2026-05-29-157a6b1d107af3e7.html  2026-06-07-c7c8443df2b19a93.html  2026-06-14-08fed1f5e997deb1.html  2026-06-21-e05662ec675dae56.html  2026-06-28-69da17e2caa6b44d.html
prompts/: cluster.md  compose_blog.md  compose_paper.md  compose_repo.md  quick_mentions.md  rank.md
sdlc-studio/: prd.md  trd.md  tsd.md
sdlc-studio/change-requests/: CR0001-common-html-rendering.md  CR0002-github-pages-and-telegram-link-mode.md  _index.md
sdlc-studio/epics/: EP0001-content-ingestion.md  EP0002-composition-pipeline.md  EP0003-orchestration-and-dx.md  EP0004-multichannel-delivery.md  EP0005-common-html-rendering.md  EP0006-github-pages-and-telegram-link-mode.md  _index.md
sdlc-studio/personas/: index.md
sdlc-studio/personas/archived/: practitioner-subscriber.md
sdlc-studio/plans/: PL0001-item-model-and-source-adapter-protocol.md  PL0002-arxiv-source-adapter.md  PL0003-github-trending-source-adapter.md  PL0004-rss-source-adapter.md  PL0005-source-registry-and-config-loader.md  _index.md
sdlc-studio/reviews/: RV0001-EP0005-initial-draft-review.md  RV0002-EP0006-initial-draft-review.md  prd-stakeholder-review-2026-05-19-v2.md  prd-stakeholder-review-2026-05-19.md
sdlc-studio/stories/: US0001-item-model-and-source-adapter-protocol.md  US0002-arxiv-source-adapter.md  US0003-github-trending-source-adapter.md  US0004-rss-source-adapter.md  US0005-source-registry-and-config-loader.md  US0006-llm-client-with-budget-enforcement.md  US0007-cluster-prompt-and-step.md  US0008-rank-prompt-and-step.md  US0009-compose-prompt-for-paper-items.md  US0010-compose-prompt-for-repo-items.md  US0011-compose-blog-quick-mentions-and-issue-assembly.md  US0012-techletter-cli-scaffolding.md  US0013-sends-jsonl-and-idempotency.md  US0014-cache-helpers.md  US0015-draft-workflow-yaml.md  US0016-send-workflow-yaml.md  US0017-readme-quickstart-and-dev-loop.md  US0018-channel-adapter-protocol-and-config-loaders.md  US0019-email-channel-adapter.md  US0020-slack-channel-adapter.md  US0021-telegram-channel-adapter.md  US0022-channel-registry-and-send-aggregation.md  US0023-sidecar-json-persistence.md  US0024-design-tokens-and-jinja2-components.md  US0025-html-web-renderer-and-golden-fixture.md  US0026-html-email-renderer-and-premailer-inlining.md  US0027-email-adapter-swap.md  US0028-publisher-protocol-and-publish-result.md  US0029-github-pages-publisher.md  US0030-telegram-teaser-renderer.md  US0031-telegram-adapter-mode-and-publisher-wiring.md  US0032-send-record-published-url-and-readme-and-e2e.md  _index.md
sdlc-studio/test-specs/: TS0001-content-ingestion.md  TS0002-composition-pipeline.md  TS0003-orchestration-and-dx.md  TS0004-multichannel-delivery.md  TS0005-item-model-and-source-adapter-protocol.md  TS0006-arxiv-source-adapter.md  TS0007-rss-source-adapter.md  TS0008-github-trending-source-adapter.md  TS0009-source-registry-and-config-loader.md  _index.md
sdlc-studio/workflows/: WF0001-item-model-and-source-adapter-protocol.md  WF0002-arxiv-source-adapter.md  WF0003-github-trending-source-adapter.md  WF0004-rss-source-adapter.md  WF0005-source-registry-and-config-loader.md
techletter/: audit.py  cache.py
techletter/compose/: deep_dive.py  issue.py  quick_mentions.py  types.py
techletter/config/: __init__.py  sources.py
techletter/delivery/: base.py  config.py  email.py  escaping.py  registry.py  slack.py  telegram.py
techletter/delivery/publishers/: __init__.py  base.py  github_pages.py
techletter/llm/: __init__.py  client.py  fake.py  prompts.py
techletter/models/: __init__.py
techletter/orchestration/: cli.py
techletter/pipeline/: cluster.py  rank.py
techletter/sources/: arxiv.py  base.py  github.py  registry.py  rss.py
tests/fixtures/: sample_issue.py
tests/unit/audit/: test_audit.py  (+1 more)
(+47 files in other folders)
