[project]
name = "techletter"
version = "0.1.0"
description = "Tech-Letter for HYL — automated weekly LLM-agent newsletter generator"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "HYL" }]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "pyright>=1.1.350",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["techletter"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "unit: unit-level tests",
    "integration: integration tests (none in US0001)",
    "property: hypothesis-based property tests",
]
