[project]
name = "techletter"
version = "0.1.0"
description = "Tech-Letter for HYL — automated weekly LLM-agent newsletter generator"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "HYL" }]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6,<3",
    "arxiv>=2.1",        # US0002 arXiv adapter
    "feedparser>=6.0",   # US0004 RSS adapter
    "httpx>=0.27",       # US0003 GitHub adapter + US0004 RSS fetch wrapping
    "selectolax>=0.3",   # US0003 GitHub trending HTML parsing
    "tenacity>=9",       # shared retry decorator across US0002/US0003/US0004
    "pyyaml>=6",         # US0005 config loader
    "anthropic>=0.40",   # US0006 LLM client (EP0002)
    "click>=8.1",        # US0012 CLI (EP0003)
    "jinja2>=3.1",        # US0024 shared HTML templates (EP0005)
    "markdown-it-py>=3",  # US0025 DeepDive.body_md → HTML (EP0005)
    "premailer>=3.10",    # US0026 email CSS inlining (EP0005)
]

[project.scripts]
techletter = "techletter.orchestration.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "pyright>=1.1.350",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["techletter"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "unit: unit-level tests",
    "integration: integration tests (none in US0001)",
    "property: hypothesis-based property tests",
]
